backend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-backend
  template:
    metadata:
      labels:
        app: web-backend
    spec:
      containers:
      - name: backend
        image: ghcr.io/aisalkyn85/web-backend:latest
        ports:
        - containerPort: 80
