frontend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-frontend
  template:
    metadata:
      labels:
        app: web-frontend
    spec:
      containers:
      - name: frontend
        image: ghcr.io/aisalkyn85/web-frontend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
