backend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-backend
spec:
  selector:
    app: web-backend
  ports:
  - port: 80
    targetPort: 80
